Printer and Assignment class created.